Fix leaderboard: don't remove entry on disconnection